--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </li>
 
             <li class="nav-item">
-              <a href="#gallery" class="nav-link">Gallery</a>
+              <a href="#projects" class="nav-link">Projects</a>
             </li>
             <li class="nav-item d-md-none">
               <a href="#contact" class="nav-link">Contact Us</a>
@@ -86,14 +86,14 @@
 
         <div class="row row-cols-1 row-cols-md-3 g-4 py-4">
           <div class="col">
-            <div class="card border-0 shadow rounded-0 ">
+            <div class="card border-0 shadow rounded-0">
               <img
                 src="images/cockpit-6381367_1920.jpg"
                 class="card-img-top rounded-0"
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title text-altdark ">Card title</h5>
+                <h5 class="card-title text-primary">Card title</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Obcaecati, perspiciatis veniam labore et sapiente magni quidem
@@ -103,16 +103,16 @@
             </div>
           </div>
           <div class="col">
-            <div class="card border-0 shadow rounded-0 ">
+            <div class="card border-0 shadow rounded-0">
               <img
                 src="images/turbine-590354_1920.jpg"
                 class="card-img-top rounded-0"
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title text-altdark ">Card title</h5>
+                <h5 class="card-title text-primary">Card title</h5>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 </p>
               </div>
             </div>
@@ -125,7 +125,7 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title text-altdark ">Card title</h5>
+                <h5 class="card-title text-primary">Card title</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Obcaecati, perspiciatis veniam labore et sapiente magni quidem
@@ -135,14 +135,14 @@
             </div>
           </div>
           <div class="col">
-            <div class="card border-0 shadow rounded-0 ">
+            <div class="card border-0 shadow rounded-0">
               <img
                 src="images/engine-gbcdd1ad48_1920.jpg"
                 class="card-img-top rounded-0"
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title text-altdark">Card title</h5>
+                <h5 class="card-title text-primary">Card title</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Obcaecati, perspiciatis veniam labore et sapiente magni quidem
@@ -152,14 +152,14 @@
             </div>
           </div>
           <div class="col">
-            <div class="card border-0 shadow rounded-0 ">
+            <div class="card border-0 shadow rounded-0">
               <img
                 src="images/main-landing-gear-1461139.jpg"
                 class="card-img-top rounded-0"
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title text-altdark">Card title</h5>
+                <h5 class="card-title text-primary">Card title</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Obcaecati, perspiciatis veniam labore et sapiente magni quidem
@@ -169,14 +169,14 @@
             </div>
           </div>
           <div class="col">
-            <div class="card border-0 shadow rounded-0 ">
+            <div class="card border-0 shadow rounded-0">
               <img
                 src="images/airplane-905532_1920.jpg"
                 class="card-img-top rounded-0"
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title text-altdark ">Card title</h5>
+                <h5 class="card-title text-primary">Card title</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Obcaecati, perspiciatis veniam labore et sapiente magni quidem
@@ -219,17 +219,89 @@
       </div>
     </section>
 
+    <!-- GALLERY/PORTFOLIO -->
+    <section id="projects" class="py-5 bg-white">
+      <div class="container-lg text-center">
+        <!-- section heading with subtext -->
+        <div class="text-center pb-2">
+          <h2 class="text-altdark">Featured Projects</h2>
+          <p class="lead text-dark">
+            Lorem, ipsum dolor sit amet consectetur adipisicing.
+          </p>
+        </div>
+        <!-- filter buttons  -->
+        <div class="row">
+          <div class="col-lg-12 d-flex justify-content-center">
+            <div class="project-filters">
+              <ul>
+                <li class="btn btn-outline-primary">All</li>
+                <li class="btn btn-outline-primary">Brand</li>
+                <li class="btn btn-outline-primary">Design</li>
+                <li class="btn btn-outline-primary">Graphic</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- images grid -->
+        <div class="row pt-4">
+          <div class="col-lg-4 my-2 m-md-0">
+            <div class="item">
+              <img src="images/king-air.jpg" alt="" class="img-fluid" />
+              <span><i class="fas fa-plus" data-bs-toggle="modal" data-bs-target="#projectmodal"></i></span>
+            </div>
+          </div>
 
+          <div class="col-lg-4 my-2 m-md-0">
+            <div class="item">
+              <img src="images/king-air.jpg" alt="" class="img-fluid" />
+              <span><i class="fas fa-plus" data-bs-toggle="modal" data-bs-target="#projectmodal"></i></span>
+            </div>
+          </div>
 
-<!-- GALLERY/PORTFOLIO -->
-<section id="gallery" class="py-5 bg-white">
-  <div class="container-lg">
-    <div class="">
-  
+          <div class="col-lg-4 my-2 m-md-0">
+            <div class="item">
+              <img src="images/king-air.jpg" alt="" class="img-fluid" />
+              <span><i class="fas fa-plus" data-bs-toggle="modal" data-bs-target="#projectmodal"></i></span>
+            </div>
+          </div>
+          <!-- second row of images -->
+          <div class="col-lg-4 my-2 m-md-0 pt-md-4">
+            <div class="item">
+              <img src="images/king-air.jpg" alt="" class="img-fluid" />
+              <span><i class="fas fa-plus" data-bs-toggle="modal" data-bs-target="#projectmodal"></i></span>
+            </div>
+          </div>
+          <div class="col-lg-4 my-2 m-md-0 pt-md-4">
+            <div class="item">
+              <img src="images/king-air.jpg" alt="" class="img-fluid" />
+              <span><i class="fas fa-plus" data-bs-toggle="modal" data-bs-target="#projectmodal"></i></span>
+            </div>
+          </div>
+          <div class="col-lg-4 my-2 m-md-0 pt-md-4">
+            <div class="item">
+              <img src="images/king-air.jpg" alt="" class="img-fluid" />
+              <span><i class="fas fa-plus" data-bs-toggle="modal" data-bs-target="#projectmodal"></i></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  </div>
-</section>
-
+    <div class="project-modal modal fade mt-5" id="projectmodal" aria-hidden="true" role="dialog">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content text-center">
+          <div class="modal-body text-center">
+            <div class="container-fluid p-0">
+              <div class="row justify-content-center">
+                <div class="col-lg-12">
+                  <img src="images/king-air.jpg" class="img-fluid rounded "alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
@@ -239,7 +311,6 @@
 
     <!-- FOOTER -->
     <footer class="text-center bg-altdark text-white pt-1">
-    
       <div class="container text-center text-md-start mt-5">
         <!-- Grid row -->
         <div class="row">
@@ -284,13 +355,13 @@
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-3">Browse</h6>
             <p>
-              <a href="#!" class="text-light">Home</a>
+              <a href="#" class="text-light">Home</a>
             </p>
             <p>
               <a href="#!" class="text-light">About Us</a>
             </p>
             <p>
-              <a href="#!" class="text-light">Gallery</a>
+              <a href="#!" class="text-light">Projects</a>
             </p>
             <p>
               <a href="#!" class="text-light">Services</a>
@@ -303,8 +374,8 @@
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-3">Contact</h6>
             <p>
-              <i class="fa-solid fa-location-dot text-secondary me-2"></i> New York,
-              NY 10012, US
+              <i class="fa-solid fa-location-dot text-secondary me-2"></i> New
+              York, NY 10012, US
             </p>
             <p>
               <i class="fas fa-envelope me-2 text-secondary"></i>
@@ -319,15 +390,14 @@
         <!-- /Grid row -->
       </div>
 
-
       <!-- Copyright -->
       <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.1)">
-        © 2023 Copyright:
+        &copy <span id="currentYear">2023</span>
         <a class="text-reset fw-bold" href="#">Turbine Solutions</a>
       </div>
       <!-- Copyright -->
     </footer>
-    <!-- Footer -->
+    <!-- /Footer -->
 
     <!-- bootstrap JS -->
     <script
